Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIEBRVB.BAS


Public Declare Function BTIEBR_BCConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_BCConfig@12" (ByVal configval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCConfigEx Lib "BTIEBR.DLL" Alias "_BTIEBR_BCConfigEx@16" (ByVal configval As Long, ByVal count As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCConfigMsg Lib "BTIEBR.DLL" Alias "_BTIEBR_BCConfigMsg@12" (ByVal configval As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCCreateList Lib "BTIEBR.DLL" Alias "_BTIEBR_BCCreateList@28" (ByVal listconfigval As Long, ByVal count As Long, ByVal msgconfigval As Long, ByVal cwd As Integer, ByRef data As Integer, ByVal rtlink As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCCreateMsg Lib "BTIEBR.DLL" Alias "_BTIEBR_BCCreateMsg@20" (ByVal configval As Long, ByVal cwd As Integer, ByRef data As Integer, ByVal rtlink As Long, ByVal handleval As Long) As Long
Public Declare Sub BTIEBR_BCPause Lib "BTIEBR.DLL" Alias "_BTIEBR_BCPause@8" (ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_BCPauseCheck Lib "BTIEBR.DLL" Alias "_BTIEBR_BCPauseCheck@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTIEBR_BCResume Lib "BTIEBR.DLL" Alias "_BTIEBR_BCResume@8" (ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_BCSchedAgain Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedAgain@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedBranch Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedBranch@16" (ByVal condition As Long, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedBranchUpdate Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedBranchUpdate@16" (ByVal destindex As Long, ByVal opcodeindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedBuild Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedBuild@20" (ByVal nummsgs As Integer, ByRef msgaddr As Long, ByRef freq As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedCall Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedCall@16" (ByVal condition As Long, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedCallUpdate Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedCallUpdate@16" (ByVal destindex As Long, ByVal opcodeindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedEntry Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedEntry@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedFrame Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedFrame@12" (ByVal timeval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedFrameEnd Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedFrameEnd@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedFrameStart Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedFrameStart@12" (ByVal timeval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedGap Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedGap@12" (ByVal gapval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedHalt Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedHalt@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedLog Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedLog@16" (ByVal condition As Long, ByVal tagval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedMsg Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedMsg@12" (ByVal msgaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedPause Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedPause@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedPulse Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedPulse@12" (ByVal dionum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedPulse0 Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedPulse0@12" (ByVal dionum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedPulse1 Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedPulse1@12" (ByVal dionum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedRestart Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedRestart@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedRetry Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedRetry@16" (ByVal condition As Long, ByVal retries As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedReturn Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedReturn@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSetDefaultGap Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSetDefaultGap@12" (ByVal gapval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSetTimeout Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSetTimeout@12" (ByVal timeoutval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSyncDefine Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSyncDefine@20" (ByVal enableflag As Long, ByVal syncmask As Integer, ByVal pinpolarity As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCTransmitMsg Lib "BTIEBR.DLL" Alias "_BTIEBR_BCTransmitMsg@12" (ByRef xmitfieldsval As XMITFIELDSEBR, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCTriggerDefine Lib "BTIEBR.DLL" Alias "_BTIEBR_BCTriggerDefine@24" (ByVal enableflag As Long, ByVal trigmask As Integer, ByVal trigval As Integer, ByVal pinpolarity As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ChGetInfo Lib "BTIEBR.DLL" Alias "_BTIEBR_ChGetInfo@12" (ByVal infotype As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ChIsBM Lib "BTIEBR.DLL" Alias "_BTIEBR_ChIsBM@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ChIsEBR Lib "BTIEBR.DLL" Alias "_BTIEBR_ChIsEBR@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ChIsM Lib "BTIEBR.DLL" Alias "_BTIEBR_ChIsM@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ChIsS Lib "BTIEBR.DLL" Alias "_BTIEBR_ChIsS@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ChStart Lib "BTIEBR.DLL" Alias "_BTIEBR_ChStart@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ChStop Lib "BTIEBR.DLL" Alias "_BTIEBR_ChStop@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_CmdMaxLoopRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdMaxLoopRd@8" (ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTIEBR_CmdMaxLoopWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdMaxLoopWr@12" (ByVal countval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_CmdShotRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdShotRd@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_CmdShotWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdShotWr@16" (ByVal value As Long, ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_CmdSkipRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdSkipRd@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_CmdSkipWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdSkipWr@16" (ByVal value As Long, ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_CmdStepRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdStepRd@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_CmdStepWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdStepWr@16" (ByVal value As Long, ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ErrorCtrl Lib "BTIEBR.DLL" Alias "_BTIEBR_ErrorCtrl@12" (ByVal ctrlval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ErrorDefine Lib "BTIEBR.DLL" Alias "_BTIEBR_ErrorDefine@28" (ByVal defineval As Long, ByVal errvalue As Integer, ByVal countval As Long, ByVal wordpos As Integer, ByVal bitpos As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ErrorSent Lib "BTIEBR.DLL" Alias "_BTIEBR_ErrorSent@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ErrorTagBC Lib "BTIEBR.DLL" Alias "_BTIEBR_ErrorTagBC@16" (ByVal tagval As Long, ByVal msgaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ErrorTagRT Lib "BTIEBR.DLL" Alias "_BTIEBR_ErrorTagRT@28" (ByVal tagval As Long, ByVal mcflag As Long, ByVal rtlink As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ErrorTriggerDefine Lib "BTIEBR.DLL" Alias "_BTIEBR_ErrorTriggerDefine@24" (ByVal enableflag As Long, ByVal trigmask As Integer, ByVal trigval As Integer, ByVal pinpolarity As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListBlockRd Lib "BTIEBR.DLL" Alias "_BTIEBR_ListBlockRd@12" (ByRef buf As Integer, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListBlockWr Lib "BTIEBR.DLL" Alias "_BTIEBR_ListBlockWr@12" (ByRef buf As Integer, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListDataRd Lib "BTIEBR.DLL" Alias "_BTIEBR_ListDataRd@16" (ByRef buf As Integer, ByVal count As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListDataWr Lib "BTIEBR.DLL" Alias "_BTIEBR_ListDataWr@16" (ByRef buf As Integer, ByVal count As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListMultiBlockRd Lib "BTIEBR.DLL" Alias "_BTIEBR_ListMultiBlockRd@16" (ByRef buf As Integer, ByRef blkcountptr As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListMultiBlockWr Lib "BTIEBR.DLL" Alias "_BTIEBR_ListMultiBlockWr@16" (ByRef buf As Integer, ByVal blkcount As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_MonConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_MonConfig@12" (ByVal configval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_MonFilterRTLink Lib "BTIEBR.DLL" Alias "_BTIEBR_MonFilterRTLink@12" (ByVal rtlinkmask As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_MonFilterSA Lib "BTIEBR.DLL" Alias "_BTIEBR_MonFilterSA@28" (ByVal rtlink As Long, ByVal rcvsamask As Long, ByVal xmtsamask As Long, ByVal rcvmcmask As Long, ByVal xmtmcmask As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_MsgBlockRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgBlockRd@12" (ByRef buf As MSGFIELDSEBR, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_MsgBlockWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgBlockWr@12" (ByRef buf As MSGFIELDSEBR, ByVal msgaddr As Long, ByVal handleval As Long) As Long
